# Code-Atlas

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README.zh.md  build.sh  build_macos.sh  code-atlas.cpp  codeBlock.h  codeExecutor.cpp  codeExecutor.h  code_executor.cpp  code_executor.h  conanfile.txt  config.json  config_template.json  constants.cpp  constants.h  global.cpp  global.h  main.cpp  markdown_processor.cpp  markdown_processor.h  model_caller.cpp  model_caller.h  timer_thread.cpp  timer_thread.h  utils.cpp  utils.h
include/: ApiClient.h  CodeExecutor.h  Color.h  Config.h  Utils.h
src/: ApiClient.cpp  CodeExecutor.cpp  Config.cpp  Utils.cpp  main.cpp
